Fix cropping of volunteer images.

--- a/volunteer/meet-our-volunteers/styles/index.scss
+++ b/volunteer/meet-our-volunteers/styles/index.scss
@@ -63,7 +63,7 @@ $secondary-volunteer-image-size: 120px;
     display: inline;
     margin: 0 auto;
     width: 100%;
-    height: auto;
+    height: 100%;
     border: none;
   }
 }
